@@ -1437,3 +1437,8 @@
 2013-06-19  Jaehwan Kim
 
         * Fix elm_scroller_page_show bug. It have to save the wanted values to show the wanted page.
+
+2013-06-22 Thiep Ha
+
+        * Move cursor when mouse moves with longpress.
+
